# installsystems

./: .gitignore  AUTHORS  COPYRIGHT  DEPENDENCIES  Makefile  Makefile.am  README  RELEASE  autogen.sh  configure.ac  setup.py
completion/bash/: is
completion/zsh/: _installsystems
debian/: changelog  control  copyright  installsystems.install  installsystems.links  installsystems.manpages  isimage.install  isinstall.install  isrepo.install  rules
doc/: Makefile  Makefile.am  conf.py  index.rst  is.1.rst
doc/api/: config.rst  database.rst  image.rst  index.rst  printer.rst  repository.rst  tarball.rst  tools.rst
installsystems/: __init__.py  __init__.py.in  config.py  database.py  exception.py  gzip.py  gzipstream.py  image.py  ordereddict.py  printer.py  repository.py  tarball.py  tarfile.py  template.py  tools.py
installsystems/image/: __init__.py  changelog.py  image.py  package.py  payload.py  source.py  tarball.py
installsystems/progressbar/: __init__.py  widgets.py
installsystems/repository/: __init__.py  config.py  database.py  factory.py  manager.py  repository.py  repository1.py  repository2.py
misc/: bash-completion  installsystems.conf  zsh-completion
samples/: installsystems.conf  is.conf  isinstall.conf  isrepo.conf  repository.conf
tools/: clean-staging  clean-testing  new-image  staging
